--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  overflow: hidden;
+}
+
+#main {
+  scroll-behavior: smooth;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+  #main {
+    scroll-behavior: auto;
+  }
+}
