--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -44,5 +44,16 @@
         console.log("animated out", detail);
       });
     </script>
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", (user) => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
   </body>
 </html>
