--- a/src/_includes/intro.html
+++ b/src/_includes/intro.html
@@ -8,9 +8,9 @@
                     class="relative mx-auto max-w-md px-4 sm:max-w-3xl sm:px-6 lg:px-0 lg:max-w-none lg:py-20"
             >
                 <!-- Testimonial card-->
-                <div class="relative pt-64 pb-10 rounded-2xl shadow-xl overflow-hidden">
+                <div class="relative pt-64 pb-10 rounded-2xl shadow-xl">
                     <img
-                            class="absolute inset-0 h-full w-full object-cover"
+                            class="absolute inset-0 h-auto w-full object-cover rounded-2xl"
                             src="/images/worker.jpg"
                             alt=""
                     />
