Add new sections

--- a/src/_includes/quality.html
+++ b/src/_includes/quality.html
@@ -1,12 +1,12 @@
 <div class="bg-white">
   <div
-    class="max-w-2xl mx-auto py-24 px-4 sm:py-32 sm:px-6 lg:max-w-7xl lg:px-8"
+    class="max-w-2xl mx-auto py-24 px-4 sm:py-16 sm:px-6 lg:max-w-7xl lg:px-8"
   >
     <div class="grid items-center grid-cols-1 gap-y-16 gap-x-8 lg:grid-cols-2">
       <div>
         <div class="border-b border-gray-200 pb-10">
           <h2
-            class="text-base text-indigo-600 font-semibold tracking-wide uppercase"
+            class="text-base text-green-500 font-semibold tracking-wide uppercase"
           >
             Notre savoir faire
           </h2>
@@ -19,8 +19,8 @@
 
         <dl class="mt-10 space-y-10">
           <div>
-            <dt class="text-sm font-medium text-gray-900">Sleek design</dt>
-            <dd class="mt-3 text-sm text-gray-500">
+            <dt class="text-md font-medium text-gray-900">Sleek design</dt>
+            <dd class="mt-3 text-md text-gray-500">
               Nous déployons une offre de travaux éligibles aux dispositifs des
               C.E.E à tous les secteurs économiques propriétaires de leur
               patrimoine (Hôpitaux, collectivités, écoles..). Ainsi que les
@@ -29,8 +29,8 @@
           </div>
 
           <div>
-            <dt class="text-sm font-medium text-gray-900">Comfort handle</dt>
-            <dd class="mt-3 text-sm text-gray-500">
+            <dt class="text-md font-medium text-gray-900">Comfort handle</dt>
+            <dd class="mt-3 text-md text-gray-500">
               Notre savoir faire est aussi à votre service dans les secteurs :
               industriel, agroalimentaire, pharmaceutique et résidenciel. Nous
               intervenons pour des travaux d’isolation, de calorifugeage
@@ -39,10 +39,10 @@
           </div>
 
           <div>
-            <dt class="text-sm font-medium text-gray-900">
+            <dt class="text-md font-medium text-gray-900">
               One-button control
             </dt>
-            <dd class="mt-3 text-sm text-gray-500">
+            <dd class="mt-3 text-md text-gray-500">
               <ol role="list">
                 <li>Isolation des planchers bas et vides sanitaire</li>
                 <li>
@@ -59,8 +59,8 @@
           </div>
 
           <div>
-            <dt class="text-sm font-medium text-gray-900">Long spout</dt>
-            <dd class="mt-3 text-sm text-gray-500">
+            <dt class="text-md font-medium text-gray-900">Long spout</dt>
+            <dd class="mt-3 text-md text-gray-500">
               <ol role="list">
                 <li>Respect du planning.</li>
                 <li>Respect des procédures réglementaires d’intervention.</li>
@@ -79,8 +79,8 @@
           </div>
 
           <div>
-            <dt class="text-sm font-medium text-gray-900">Long spout</dt>
-            <dd class="mt-3 text-sm text-gray-500">
+            <dt class="text-md font-medium text-gray-900">Long spout</dt>
+            <dd class="mt-3 text-md text-gray-500">
               Qualité, Contrôle, Transparence. Une offre clef en main Le montage
               des dossiers. La coordination et la réalisation des travaux. Le
               financement intégral des opérations. Dans certain cas, une
