--- a/src/_includes/team.html
+++ b/src/_includes/team.html
@@ -1,48 +1,57 @@
 <!-- This example requires Tailwind CSS v2.0+ -->
 <div class="bg-white">
-    <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8">
-        <div class="max-w-3xl mx-auto text-center">
-            <h2 class="text-3xl font-extrabold text-gray-900">Notre equipe a votre service</h2>
-            <p class="mt-4 text-lg text-gray-500">Calisol compte parmi ses effectifs 10 salariés répartis par équipes de 2.</p>
-        </div>
-        <dl class="mt-12 space-y-10 sm:space-y-0 sm:grid sm:grid-cols-1 sm:gap-x-6 sm:gap-y-12 lg:grid-cols-3 lg:gap-x-8">
-            <div class="relative">
-                <dt>
-                    <!-- Heroicon name: outline/check -->
-                    <svg class="absolute h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-                    </svg>
-                    <p class="ml-9 text-lg leading-6 font-medium text-gray-900">Technicien qualifié</p>
-                </dt>
-                <dd class="mt-2 ml-9 text-base text-gray-500">
-                    En tenant compte des besoins du marché et de l’avencement des travaux, nous mettons en place le nombre d’équipes nécessaire (technicien qualifié, et selon la demande du maître d’ouvrage).
-                </dd>
-            </div>
-
-            <div class="relative">
-                <dt>
-                    <!-- Heroicon name: outline/check -->
-                    <svg class="absolute h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-                    </svg>
-                    <p class="ml-9 text-lg leading-6 font-medium text-gray-900">Professionalisme</p>
-                </dt>
-                <dd class="mt-2 ml-9 text-base text-gray-500">
-                    Nos équipes seront encadrées par le même responsable d’opération (Mr DJELLALI Mourad) selon les règles de l’art en vigueur.
-                </dd>
-            </div>
-
-            <div class="relative">
-                <dt>
-                    <!-- Heroicon name: outline/check -->
-                    <svg class="absolute h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
-                    </svg>
-                    <p class="ml-9 text-lg leading-6 font-medium text-gray-900">Encadrement</p>
-                </dt>
-                <dd class="mt-2 ml-9 text-base text-gray-500">
-                    L’encadrement administratif et technique est assuré par une équipe soudée qui se complète.                </dd>
-            </div>
-        </dl>
+  <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8">
+    <div class="max-w-3xl">
+      <h2 class="text-base font-semibold tracking-wider text-green-500 uppercase">Notre equipe a votre service</h2>
+      <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
+        Calisol compte parmi ses effectifs 10 salariés répartis par équipes de
+        2.
+      </p>
     </div>
+    <dl class="mt-12 space-y-10 sm:space-y-0 sm:grid sm:grid-cols-1 sm:gap-x-6 sm:gap-y-12 lg:grid-cols-3 lg:gap-x-8">
+      <div class="relative">
+        <dt>
+          <!-- Heroicon name: outline/check -->
+          <svg class="absolute h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none"
+               viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg>
+          <p class="ml-9 text-lg leading-6 font-medium text-gray-900">Technicien qualifié</p>
+        </dt>
+        <dd class="mt-2 ml-9 text-base text-gray-500">
+          En tenant compte des besoins du marché et de l’avencement des travaux, nous mettons en place le nombre
+          d’équipes nécessaire (technicien qualifié, et selon la demande du maître d’ouvrage).
+        </dd>
+      </div>
+
+      <div class="relative">
+        <dt>
+          <!-- Heroicon name: outline/check -->
+          <svg class="absolute h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none"
+               viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg>
+          <p class="ml-9 text-lg leading-6 font-medium text-gray-900">Professionalisme</p>
+        </dt>
+        <dd class="mt-2 ml-9 text-base text-gray-500">
+          Nos équipes seront encadrées par le même responsable d’opération (Mr DJELLALI Mourad) selon les règles de
+          l’art en vigueur.
+        </dd>
+      </div>
+
+      <div class="relative">
+        <dt>
+          <!-- Heroicon name: outline/check -->
+          <svg class="absolute h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg" fill="none"
+               viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+          </svg>
+          <p class="ml-9 text-lg leading-6 font-medium text-gray-900">Encadrement</p>
+        </dt>
+        <dd class="mt-2 ml-9 text-base text-gray-500">
+          L’encadrement administratif et technique est assuré par une équipe soudée qui se complète.
+        </dd>
+      </div>
+    </dl>
+  </div>
 </div>
