Add new sections energy

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="11ty test" />
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="/styles/main.css" />
-  </head>
-  <body>
-    {{ content | safe }}
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="11ty test" />
+  <title>{{ title }}</title>
+  <link rel="stylesheet" href="/styles/main.css" />
+</head>
+<body>
+  {{ content | safe }}
+  <script>
+    // Callback for IntersectionObserver
+    const callback = function(entries) {
+      entries.forEach(entry => {
+
+        // Is the element in the viewport?
+        if (entry.isIntersecting) {
+
+          // Add the fadeIn class:
+          entry.target.classList.add("motion-safe:animate-fadeIn");
+        } else {
+
+          // Otherwise remove the fadein class
+          entry.target.classList.remove("motion-safe:animate-fadeIn");
+        }
+      });
+    };
+
+    // Get all the elements you want to show on scroll
+    const targets = document.querySelectorAll(".js-show-on-scroll");
+
+    // Set up a new observer
+    const observer = new IntersectionObserver(callback);
+
+    // Loop through each of the target
+    targets.forEach(function(target) {
+      // Hide the element
+      target.classList.add("opacity-0");
+
+      // Add the element to the watcher
+      observer.observe(target);
+    });
+  </script>
+</body>
 </html>
