--- a/src/_includes/establishment.html
+++ b/src/_includes/establishment.html
@@ -20,7 +20,7 @@
                   </svg>
                 </span>
               </div>
-              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">Premier contact</h3>
+              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">1. Premier contact</h3>
               <p class="mt-5 text-base text-gray-500">
                 Nous vous expliquons toutes les étapes du projet et validons avec vous les critères d’éligibilité au
                 dispositif des CEE avant la visite d’un technicien.
@@ -40,7 +40,7 @@
                   </svg>
                 </span>
               </div>
-              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">Visite Technique</h3>
+              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">2. Visite Technique</h3>
               <p class="mt-5 text-base text-gray-500">
                 Notre technicien se déplace sur site afin de confirmer la faisabilité du projet, procéder aux métrés et
                 rédiger un rapport complet en vue de l’installation.
@@ -60,7 +60,7 @@
                   </svg>
                 </span>
               </div>
-              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">Validation de votre dossier CEE</h3>
+              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">3. Validation de votre dossier CEE</h3>
               <p class="mt-5 text-base text-gray-500">
                 Votre devis à 0 € vous est transmis accompagné de l’offre de prime correspondante. Ces documents
                 officialisent la prise en charge à 100% de vos travaux de calorifugeage.
@@ -80,7 +80,7 @@
                   </svg>
                 </span>
               </div>
-              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">Réalisation des travaux</h3>
+              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">4. Réalisation des travaux</h3>
               <p class="mt-5 text-base text-gray-500">
                 Nos installateurs, accompagnés d’un chef de chantier, viennent procéder à l’installation. Aucune
                 surprise le jour du chantier, car la visite technique a permis de planifi er l’installation dans ses
@@ -101,7 +101,7 @@
                   </svg>
                 </span>
               </div>
-              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">Contrôle post travaux par un Organisme
+              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">5. Contrôle post travaux par un Organisme
                 certifié Cofrac</h3>
               <p class="mt-5 text-base text-gray-500">
                 Une fois notre travail réalisé, un organisme externe agréé Cofrac se déplace afin de vérifier la
@@ -124,7 +124,7 @@
                   </svg>
                 </span>
               </div>
-              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">Attestation sur l’Honneur</h3>
+              <h3 class="mt-8 text-lg font-medium text-gray-900 tracking-tight">6. Attestation sur l’Honneur</h3>
               <p class="mt-5 text-base text-gray-500">
                 Nous établissons votre Attestation sur l’Honneur, qui reprend en détail tous les aspects de votre
                 installation. Ce document atteste de la bonne réalisation de vos travaux et de leur éligibilité au
