--- a/src/_includes/intro.html
+++ b/src/_includes/intro.html
@@ -8,13 +8,14 @@
         class="relative mx-auto max-w-md px-4 sm:max-w-3xl sm:px-6 lg:px-0 lg:max-w-none lg:py-20"
       >
         <!-- Testimonial card-->
-        <div class="relative pt-64 pb-10 rounded-2xl shadow-xl">
-          <img
-            class="absolute inset-0 h-auto w-full object-cover rounded-2xl"
-            src="/images/worker.jpg"
-            alt=""
-          />
-        </div>
+          <div class="relative pt-64 pb-10 rounded-2xl shadow-xl">
+            <img
+              class="absolute inset-0 h-auto w-full object-cover rounded-2xl"
+              src="/images/worker.jpg"
+              alt=""
+            />
+          </div>
+
       </div>
     </div>
 
@@ -59,23 +60,23 @@
       <div class="mt-10">
         <dl class="grid grid-cols-2 gap-x-4 gap-y-8">
           <div class="border-t-2 border-gray-100 pt-6">
-            <dt class="text-base font-medium text-gray-500">Founded</dt>
+            <dt class="text-base font-medium text-gray-500">Création</dt>
             <dd class="text-3xl font-extrabold tracking-tight text-gray-900">
               2014
             </dd>
           </div>
 
           <div class="border-t-2 border-gray-100 pt-6">
-            <dt class="text-base font-medium text-gray-500">Employees</dt>
+            <dt class="text-base font-medium text-gray-500">Employés</dt>
             <dd class="text-3xl font-extrabold tracking-tight text-gray-900">
               10
             </dd>
           </div>
 
           <div class="border-t-2 border-gray-100 pt-6">
-            <dt class="text-base font-medium text-gray-500">Experience</dt>
+            <dt class="text-base font-medium text-gray-500">Expérience</dt>
             <dd class="text-3xl font-extrabold tracking-tight text-gray-900">
-              20 Years
+              20 ans
             </dd>
           </div>
         </dl>
