--- a/src/_includes/quality.html
+++ b/src/_includes/quality.html
@@ -19,7 +19,7 @@
 
         <dl class="mt-10 space-y-10">
           <div>
-            <dt class="text-md font-medium text-gray-900">Sleek design</dt>
+            <dt class="text-md font-medium text-green-700">Dispositifs C.E.E</dt>
             <dd class="mt-3 text-md text-gray-500">
               Nous déployons une offre de travaux éligibles aux dispositifs des
               C.E.E à tous les secteurs économiques propriétaires de leur
@@ -29,7 +29,7 @@
           </div>
 
           <div>
-            <dt class="text-md font-medium text-gray-900">Comfort handle</dt>
+            <dt class="text-md font-medium text-green-700">Multi secteurs</dt>
             <dd class="mt-3 text-md text-gray-500">
               Notre savoir faire est aussi à votre service dans les secteurs :
               industriel, agroalimentaire, pharmaceutique et résidenciel. Nous
@@ -39,8 +39,8 @@
           </div>
 
           <div>
-            <dt class="text-md font-medium text-gray-900">
-              One-button control
+            <dt class="text-md font-medium text-green-700">
+              Isolation
             </dt>
             <dd class="mt-3 text-md text-gray-500">
               <ol role="list">
@@ -59,7 +59,7 @@
           </div>
 
           <div>
-            <dt class="text-md font-medium text-gray-900">Long spout</dt>
+            <dt class="text-md font-medium text-green-700">Qualité du travail</dt>
             <dd class="mt-3 text-md text-gray-500">
               <ol role="list">
                 <li>Respect du planning.</li>
@@ -79,7 +79,7 @@
           </div>
 
           <div>
-            <dt class="text-md font-medium text-gray-900">Long spout</dt>
+            <dt class="text-md font-medium text-green-700">Une offre clef en main</dt>
             <dd class="mt-3 text-md text-gray-500">
               Qualité, Contrôle, Transparence. Une offre clef en main Le montage
               des dossiers. La coordination et la réalisation des travaux. Le
