--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -1,54 +1,54 @@
 <!-- NAV -->
 <!-- This example requires Tailwind CSS v2.0+ -->
-<header class="bg-green-900 flex justify-center">
+<header class="bg-green-50 flex justify-center drop-shadow-md z-50">
     <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8" aria-label="Top">
-        <div class="w-full py-6 flex items-center justify-between border-b border-green-500 lg:border-none">
+        <div class="w-full py-6 flex items-center justify-between">
             <div class="flex items-center">
                 <a href="#">
                     <span class="sr-only">Workflow</span>
-                    <img class="h-10 w-auto" src="https://tailwindui.com/img/logos/workflow-mark.svg?color=white" alt="">
+                    <img class="h-10 w-auto" src="/images/logo.png" alt="">
                 </a>
                 <div class="hidden ml-10 space-x-8 lg:block">
-                    <a href="#" class="text-base font-medium text-white hover:text-red-50" key="Solutions">
+                    <a href="#" class="text-base font-medium text-gray-900 hover:text-green-500" key="Solutions">
                         Qui sommes-nous
                     </a>
 
-                    <a href="#" class="text-base font-medium text-white hover:text-red-50" key="Pricing">
+                    <a href="#" class="text-base font-medium text-gray-900 hover:text-green-500" key="Pricing">
                         Savoir faire
                     </a>
 
-                    <a href="#" class="text-base font-medium text-white hover:text-red-50" key="Docs">
+                    <a href="#" class="text-base font-medium text-gray-900 hover:text-green-500" key="Docs">
                         Realisations
                     </a>
 
-                    <a href="#" class="text-base font-medium text-white hover:text-red-50" key="Docs">
+                    <a href="#" class="text-base font-medium text-gray-900 hover:text-green-500" key="Docs">
                         Securite
                     </a>
 
-                    <a href="#" class="text-base font-medium text-white hover:text-red-50" key="Docs">
+                    <a href="#" class="text-base font-medium text-gray-900 hover:text-green-500" key="Docs">
                         Equipe
                     </a>
 
-                    <a href="#" class="text-base font-medium text-white hover:text-red-50" key="Company">
+                    <a href="#" class="text-base font-medium text-gray-900 hover:text-green-500" key="Company">
                         Contact
                     </a>
                 </div>
             </div>
         </div>
         <div class="py-4 flex flex-wrap justify-center space-x-6 lg:hidden">
-            <a href="#" class="text-base font-medium text-white hover:text-red-50" key="Solutions">
+            <a href="#" class="text-base font-medium text-gray-900 hover:text-green-500" key="Solutions">
                 Qui sommes-nous
             </a>
 
-            <a href="#" class="text-base font-medium text-white hover:text-red-50" key="Pricing">
+            <a href="#" class="text-base font-medium text-gray-900 hover:text-green-500" key="Pricing">
                 Pricing
             </a>
 
-            <a href="#" class="text-base font-medium text-white hover:text-red-50" key="Docs">
+            <a href="#" class="text-base font-medium text-gray-900 hover:text-green-500" key="Docs">
                 Docs
             </a>
 
-            <a href="#" class="text-base font-medium text-white hover:text-red-50" key="Company">
+            <a href="#" class="text-base font-medium text-gray-900 hover:text-green-500" key="Company">
                 Company
             </a>
         </div>
